--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar container">
       <a href="index.html" class="logo">
         <img src="assets/logo.svg" alt="ACE Tutoring Logo" />
-        <span>ACE Tutoring</span>
+        <span>ACE Tutor</span>
       </a>
       <ul class="nav-links">
         <li><a href="about.html">About</a></li>
