--- a/Website/index.html
+++ b/Website/index.html
@@ -20,8 +20,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="booking.html" class="nav-btn">Book Now</a></li>
       </ul>
-      <a href="https://booking.appointy.com/AceTutor?sr=1246231" target="_blank" class="btn">Book Now</a>
     </nav>
   </header>
 
