--- a/Website/index.html
+++ b/Website/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ACE Tutoring — Austin’s Student-Led Academic Coaching</title>
+  <title>ACE Tutor — Austin’s Student-Led Academic Coaching</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -19,9 +19,10 @@
       <ul class="nav-links">
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="get-started.html">Get Started</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="booking.html" class="nav-btn">Book Now</a></li>
       </ul>
+      <a href="get-started.html" class="btn">Book Now</a>
     </nav>
   </header>
 
@@ -80,16 +81,16 @@
 
   <footer>
     <div class="footer-content">
-      <h3>ACE Tutoring</h3>
+      <h3>ACE Tutor</h3>
       <p>Achievement • Clarity • Empowerment</p>
       <div class="social-icons">
-        <a href="tel:5128884489"><i class="fas fa-phone"></i></a>
-        <a href="mailto:contact@tutorace.org"><i class="fas fa-envelope"></i></a>
-        <a href="https://instagram.com/acetutoratx" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="tel:5128884489" title="Call us"><i class="fas fa-phone"></i></a>
+        <a href="mailto:contact@tutorace.org" title="Email us"><i class="fas fa-envelope"></i></a>
+        <a href="https://instagram.com/acetutoratx" target="_blank" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
       </div>
       <p>Email: contact@tutorace.org<br>Phone: (512) 888-4489</p>
     </div>
-    <p class="copyright">© 2025 ACE Tutoring. All rights reserved. Austin, TX.</p>
+    <p class="copyright">© 2025 ACE Tutor. All rights reserved. Austin, TX.</p>
   </footer>
 
   <script src="js/main.js"></script>
