--- a/Website/about.html
+++ b/Website/about.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About — ACE Tutoring</title>
+  <title>About — ACE Tutor</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -14,14 +15,15 @@
     <nav class="navbar container">
       <a href="index.html" class="logo">
         <img src="assets/logo.svg" alt="ACE Tutoring Logo" />
-        <span>ACE Tutoring</span>
+        <span>ACE Tutor</span>
       </a>
       <ul class="nav-links">
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="get-started.html">Get Started</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="https://booking.appointy.com/AceTutor?sr=1246231" target="_blank" class="btn">Book Now</a>
+      <a href="get-started.html" class="btn">Book Now</a>
     </nav>
   </header>
 
@@ -32,18 +34,14 @@
         <img src="https://via.placeholder.com/300x300?text=Aarav+Singh" alt="Aarav Singh" style="width:100%; border-radius:12px; margin-bottom:1.2rem;">
         <h3>Aarav Singh</h3>
         <p><strong>SAT: 1570 | GPA: 5.8</strong></p>
-        <p>Aarav Singh is the co-founder and operations director of ACE Tutoring. With a 1570 SAT score, a 5.8 GPA, and 5s on all AP exams, he combines academic excellence with strong leadership and organizational skills. Aarav manages client relations, scheduling, and business operations while tutoring students in many subjects and test preparation. Known for his structure-driven teaching and strategic mindset, he focuses on helping students learn how to learn—building confidence, efficiency, and lasting understanding.</p>
+        <p>AP Scholar with Distinction. Believes learning how to learn is the ultimate academic superpower.</p>
       </div>
       <div class="card fade-in">
         <img src="https://via.placeholder.com/300x300?text=Charity+Kao" alt="Charity Kao" style="width:100%; border-radius:12px; margin-bottom:1.2rem;">
         <h3>Charity Kao</h3>
         <p><strong>SAT: 1560 | GPA: 5.8</strong></p>
-        <p>Charity Kao is the co-founder and academic director of ACE Tutoring. With a 1560 SAT score, a 5.8+ GPA, and 5s on all AP exams, she leads tutor training, academic quality, and student learning development. Charity is known for her clarity, patience, and ability to simplify complex topics while maintaining academic rigor. She ensures every ACE tutor upholds the company’s high standards of excellence and empathy, guiding students to achieve consistent, meaningful academic growth.</p>
+        <p>AP Scholar with Distinction. Focuses on clarity, confidence, and authentic voice in every session.</p>
       </div>
-    </div>
-    <div class="fade-in" style="max-width: 800px; margin: 3rem auto 0; text-align: center; line-height: 1.7;">
-      <p>ACE Tutoring was founded by Aarav Singh and Charity Kao, two top-performing students from Westwood High School in Austin, Texas. Driven by a shared belief that students learn best from those who've recently mastered the same material, they built ACE to make high-quality, personalized tutoring more relatable, effective, and accessible.</p>
-      <p style="margin-top: 1.2rem;">With Aarav leading operations and client management, and Charity overseeing academic development and tutor training, the two balance business precision with educational excellence. Their combined leadership ensures that every ACE session reflects the company's core values — Achievement, Clarity, and Empowerment — and that every student receives the guidance, structure, and confidence they need to thrive.</p>
     </div>
   </section>
 
@@ -64,16 +62,16 @@
 
   <footer>
     <div class="footer-content">
-      <h3>ACE Tutoring</h3>
+      <h3>ACE Tutor</h3>
       <p>Achievement • Clarity • Empowerment</p>
       <div class="social-icons">
-        <a href="tel:5128884489"><i class="fas fa-phone"></i></a>
-        <a href="mailto:contact@tutorace.org"><i class="fas fa-envelope"></i></a>
-        <a href="https://instagram.com/acetutoratx" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="tel:5128884489" title="Call us"><i class="fas fa-phone"></i></a>
+        <a href="mailto:contact@tutorace.org" title="Email us"><i class="fas fa-envelope"></i></a>
+        <a href="https://instagram.com/acetutoratx" target="_blank" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
       </div>
       <p>Email: contact@tutorace.org<br>Phone: (512) 888-4489</p>
     </div>
-    <p class="copyright">© 2025 ACE Tutoring</p>
+    <p class="copyright">© 2025 ACE Tutor. All rights reserved. Austin, TX.</p>
   </footer>
 
   <script src="js/main.js"></script>
