--- a/Website/index.html
+++ b/Website/index.html
@@ -28,7 +28,6 @@
         <li><a href="get-started.html">Get Started</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="get-started.html" class="btn desktop-only">Book Now</a>
     </nav>
   </header>
 
@@ -38,7 +37,7 @@
       Student-founded tutoring in Austin, TX — where high-achieving peers help you master your classes, not just memorize them.
     </p>
     <div class="fade-in">
-      <a href="https://booking.appointy.com/AceTutor?sr=1246231" target="_blank" class="btn">Book Free Discovery Call →</a>
+      <a href="get-started.html" class="btn">Book Now →</a>
     </div>
   </section>
 
