--- a/Website/about.html
+++ b/Website/about.html
@@ -36,16 +36,15 @@
     <h2 class="section-title">Meet the Founders</h2>
     <div class="card-grid">
       <div class="card fade-in">
-        <img src="https://via.placeholder.com/300x300?text=Aarav+Singh" alt="Aarav Singh" style="width:100%; border-radius:12px; margin-bottom:1.2rem;">
-        <h3>Aarav Singh</h3>
+        <h3>Aarav Singh — Co-Founder & Chief Operations Officer</h3>
         <p><strong>SAT: 1570 | GPA: 5.8</strong></p>
-        <p>AP Scholar with Distinction. Believes learning how to learn is the ultimate academic superpower.</p>
+        <p>Aarav is the organizational backbone of ACE Tutor, overseeing operations, client management, and personalized learning development for each student. With a 1570 SAT, straight A’s in all AP and IB coursework, and 5s on every AP exam, he combines academic excellence with a passion for teaching. Aarav’s approach emphasizes clarity, confidence, and structure — helping students not only improve grades but also master the skill of learning how to learn.
+</p>
       </div>
       <div class="card fade-in">
-        <img src="https://via.placeholder.com/300x300?text=Charity+Kao" alt="Charity Kao" style="width:100%; border-radius:12px; margin-bottom:1.2rem;">
-        <h3>Charity Kao</h3>
+        <h3>Charity Kao - Co-Founder & Chief Academic Officer</h3>
         <p><strong>SAT: 1560 | GPA: 5.8</strong></p>
-        <p>AP Scholar with Distinction. Focuses on clarity, confidence, and authentic voice in every session.</p>
+        <p>Charity leads ACE’s academic strategy and tutor training, ensuring every session delivers genuine understanding and measurable growth. With a 1560 SAT, top marks across all AP and IB classes, and 5s on every AP exam, she brings both expertise and empathy to her students. Charity’s teaching style focuses on identifying core challenges, breaking down complex topics, and building the confidence students need to excel long-term.</p>
       </div>
     </div>
   </section>
