--- a/Website/about.html
+++ b/Website/about.html
@@ -36,7 +36,7 @@
     <h2 class="section-title">Meet the Founders</h2>
     <div class="card-grid">
       <div class="card fade-in">
-        <h3>Aarav Singh — Co-Founder & Chief Operations Officer</h3>
+        <h3>Aarav Singh - Co-Founder & Chief Operations Officer</h3>
         <p><strong>SAT: 1570 | GPA: 5.8</strong></p>
         <p>Aarav is the organizational backbone of ACE Tutor, overseeing operations, client management, and personalized learning development for each student. With a 1570 SAT, straight A’s in all AP and IB coursework, and 5s on every AP exam, he combines academic excellence with a passion for teaching. Aarav’s approach emphasizes clarity, confidence, and structure — helping students not only improve grades but also master the skill of learning how to learn.
 </p>
